tests/duplicate_libs/test.js
(global_foo: string); // error: number ~> string
